Do Rick and Morty Task. Step 2. Remove comments from pom.xml, use Value to get the Api Url value from the application.properties file. Move the logic of getting the initial data to the CharacterInitializeClient service class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+rick.and.morty.api.url=https://rickandmortyapi.com/api/character
